# conjure-verification

./: .gitignore  Cargo.toml  README.md  build.gradle  example-types.conjure.yml  gradlew.bat  master-test-cases.yml  settings.gradle  test-cases.yml  versions.props
.circleci/: config.yml
.github/: autolabeler.yml
changelog/@unreleased/: pr-273.v2.yml  pr-276.v2.yml  pr-295.v2.yml  pr-314.v2.yml  pr-326.v2.yml  pr-330.v2.yml  pr-506.v2.yml  pr-522.v2.yml
docs/: client_verifier.md  server_verifier.md  verification_client.md  verification_server.md
gradle/: publish-json-artifacts.gradle  publish-rust-dist.gradle
scripts/: docker_build.sh
serde-conjure/: Cargo.toml
serde-conjure-derive/: Cargo.toml
serde-conjure-derive/src/: bound.rs  de.rs  lib.rs  ser.rs
serde-conjure-derive/tests/: de.rs  ser.rs
serde-conjure/src/: lib.rs
server-verification-api/: build.gradle
server-verification-api/src/main/conjure/: single-header-service.conjure.yml
server-verification-api/src/main/java/com/palantir/conjure/verification/server/: CompileTestCasesJson.java
test-cases-api/src/main/conjure/: all-test-cases.conjure.yml
test-cases-api/src/main/java/com/palantir/conjure/verification/: TestCasesUtils.java
test-cases-internal/: build.gradle
test-cases-internal/src/main/conjure/: master-test-cases.conjure.yml
test-cases-internal/src/main/java/com/palantir/conjure/verification/: ClientTestCasesUtils.java  EndpointNameConjureTypeVisitor.java  GenerateClientServices.java  GenerateServerServices.java  ResolveLocalReferencesConjureTypeVisitor.java  ServerTestCasesUtils.java  TestCasesUtils.java
verification-api/: build.gradle
verification-api/src/main/conjure/: all-test-cases.conjure.yml  auto-deserialize-service.conjure.yml  calculator.conjure.yml  example-types.conjure.yml  single-header-service.conjure.yml  single-path-param-service.conjure.yml  single-query-param-service.conjure.yml  test-cases.conjure.yml
verification-api/src/main/java/com/palantir/conjure/compliance/: CompileTestCasesJson.java
verification-api/src/main/java/com/palantir/conjure/verification/: EndpointNameConjureTypeVisitor.java  ResolveLocalReferencesConjureTypeVisitor.java  TestCasesUtils.java
verification-client/: Cargo.toml  Dockerfile
verification-client-api/: build.gradle  test-cases.yml
verification-client-api/src/generator/java/com/palantir/conjure/verification/client/: ClientTestCasesUtils.java  GenerateVerificationClientConjureDefinitions.java
verification-client-api/src/main/conjure/: auto-deserialize-service.yml  example-types.conjure.yml  test-cases.conjure.yml  verification-client.conjure.yml
verification-client-api/src/main/java/com/palantir/conjure/verification/client/: CompileTestCasesJson.java  CompileVerificationClientTestCasesJson.java  GenerateVerificationClientTestCases.java
verification-client/src/: errors.rs  main.rs  resource.rs  test.rs  test_spec.rs
verification-common/: Cargo.toml
verification-common/src/: lib.rs  macros.rs  test_spec.rs  type_mapping.rs
verification-common/src/conjure/: ir.rs  mod.rs  type_resolution.rs
verification-common/src/conjure/resolved_type/: builders.rs  mod.rs
verification-common/src/conjure/value/: de.rs  de_plain.rs  mod.rs  util.rs
verification-common/src/conjure/value/visitors/: map.rs  object.rs  option.rs  seq.rs  set.rs  union.rs
verification-error/: Cargo.toml
verification-error-derive/: Cargo.toml
verification-error-derive/src/: lib.rs
verification-error/src/: lib.rs
verification-error/tests/: error_type.rs
verification-http/: Cargo.toml
verification-http-client/: Cargo.toml
verification-http-client-config/: Cargo.toml
verification-http-client-config/src/: lib.rs  raw.rs  test.rs
verification-http-client/src/: backoff.rs  body.rs  lib.rs  node_selector.rs  reloadable.rs  request.rs  response.rs  test.rs  user_agent.rs
verification-http-client/src/async/: alpn.rs  custom_error.rs  mod.rs  proxy.rs  socket.rs
verification-http-client/test/: cert.cer  key.pem
verification-http-server/: Cargo.toml
verification-http-server/src/: error_handling.rs  handler.rs  lib.rs  router.rs
verification-http/src/: auth.rs  error.rs  lib.rs  request.rs  resource.rs  response.rs
verification-server/: Cargo.toml  Dockerfile
verification-server-api/: .gitignore  build.gradle  test-cases.yml
verification-server-api/src/generator/java/com/palantir/conjure/verification/server/: GenerateVerificationServerConjureDefinitions.java  ServerTestCasesUtils.java
verification-server-api/src/main/conjure/: auto-deserialize-confirm-service.conjure.yml  auto-deserialize-service.conjure.yml  example-types.conjure.yml  single-path-param-service.conjure.yml  single-query-param-service.conjure.yml  test-cases.conjure.yml
verification-server-api/src/main/java/com/palantir/conjure/verification/server/: CompileTestCasesJson.java  CompileVerificationServerTestCasesJson.java  GenerateVerificationServerTestCases.java
verification-server/src/: conjure_deser.rs  conjure_serde_value.rs  error_handling.rs  errors.rs  fixed_streaming.rs  handler.rs  ir.rs  macros.rs  main.rs  more_serde_json.rs  raw_json.rs  resolved_test_cases.rs  resource.rs  router.rs  serde_json_2.rs  service_tester.rs  test.rs  test_spec.rs  type_mapping.rs  type_resolution.rs
verification-server/src/conjure/: ir.rs  mod.rs  resolved_type.rs  safe_double.rs  type_resolution.rs
verification-server/src/conjure/value/: de.rs  double.rs  mod.rs  safe_double.rs
verification-server/src/conjure/value/visitors/: map.rs  mod.rs  object.rs  option.rs  seq.rs  set.rs  union.rs
