[workspace]
members = [
    "verification-server",
    "verification-common",
    "verification-error",
    "verification-error-derive",
    "verification-http",
    "verification-http-client",
    "verification-http-client-config",
    "serde-conjure",
    "serde-conjure-derive"
]

# Enable line number debuginfo on release builds for backtraces
[profile.release]
debug = 1
