[workspace]
members = [
    "verification-server",
    "verification-common",
    "verification-client",
    "verification-error",
    "verification-error-derive",
    "verification-http",
    "verification-http-client",
    "verification-http-client-config",
    "verification-http-server",
    "serde-conjure",
    "serde-conjure-derive"
]

# Enable line number debuginfo on release builds for backtraces
[profile.release]
debug = 1
