[package]
name = "serde-conjure-derive"
version = "0.1.4"
authors = ["Steven Fackler <sfackler@palantir.com>"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.14", features = ["visit"] }
proc-macro2 = "0.4"
quote = "0.6"

[dev-dependencies]
serde = "1.0"
serde_json = "1.0"

serde-conjure = { path = "../serde-conjure" }
