[package]
name = "conjure-verification-common"
version = "0.1.0"
authors = ["Dan Sanduleac <dsanduleac@palantir.com>"]
license-file = "../LICENSE"

[dependencies]
conjure-verification-error = { path = "../verification-error" }
conjure-verification-error-derive = { path = "../verification-error-derive" }
serde-conjure = { path = "../serde-conjure" }
serde-conjure-derive = { path = "../serde-conjure-derive" }

base64 = "0.9"
derive_more = "0.11"
uuid = { version = "0.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
itertools = "0.7.4"
serde = "1.0"
serde-value = "0.5.2"
serde_derive = "1.0"
serde_json = "1.0"
serde_yaml = "0.7"
serde_plain = "0.3"
