[package]
name = "conjure-verification-error"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license-file = "../LICENSE"

[dependencies]
backtrace = "0.3"
uuid = { version = "0.6", features = ["v4", "serde"] }
serde = "1.0"
itertools = "0.7"
serde_derive = "1.0"
serde_plain = "0.3"
lazy_static = "1.0"
regex = "1.0"

[dev-dependencies]
serde_json = "1.0"
conjure-verification-error-derive = { path = "../verification-error-derive" }
