[package]
name = "conjure-verification-http-client"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>"]
license-file = "../LICENSE"

[dependencies]

base64 = "0.9"
bytes = "0.4"
crossbeam = "0.3"
flate2 = "1.0"
futures = "0.1.15"
hyper = "0.12.2"
hyper-openssl = "0.6"
http-zipkin = "0.1"
lazy_static = "1.0"
log = "0.4"
mime = "0.3"
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = "0.6"
rand = "0.5"
regex = "1.0"
serde = "1.0"
serde_cbor = "0.9"
serde_json = "1.0"
serde_urlencoded = "0.5"
state_machine_future = "0.1.7"
tokio = "0.1.11"
tokio-io = "0.1"
tokio-io-timeout = "0.3"
tokio-threadpool = "0.1"
typed-headers = "0.1"
url = "1.0"
zipkin = "0.3"
conjure-verification-error = { path = "../verification-error" }
conjure-verification-http-client-config = { path = "../verification-http-client-config" }

[dev-dependencies]
tokio-openssl = "0.2"
