[package]
name = "conjure-verification-http-server"
version = "0.1.0"
authors = ["Dan Sanduleac <dsanduleac@palantir.com>"]
license-file = "../LICENSE"

[dependencies]
conjure-verification-http = { path = "../verification-http" }
conjure-verification-error = { path = "../verification-error" }
conjure-verification-error-derive = { path = "../verification-error-derive" }

bytes = "0.4"
flate2 = "1.0.24"
futures = "0.1.21"
http = "0.1"
hyper = "0.12"
itertools = "0.7.4"
lazy_static = "1.0"
log = "0.4"
mime = "0.3"
route-recognizer = "0.1.12"
serde = "1.0"
serde_json = "1.0"
tokio = "0.1"
typed-headers = "0.1"
url = "1.0"
