[package]
name = "conjure-verification-http"
version = "0.1.0"
authors = ["Steven Fackler <sfackler@palantir.com>", "Dan Sanduleac <dsanduleac@palantir.com>"]
license-file = "../LICENSE"

[dependencies]
conjure-verification-error = { path = "../verification-error" }
conjure-verification-error-derive = { path = "../verification-error-derive" }

bytes = "0.4"
http = "0.1"
lazy_static = "1.0"
mime = "0.3"
serde = "1.0"
serde_json = "1.0"
typed-headers = "0.1"
url = "1.0"
