[package]
name = "conjure-verification-server"
version = "0.1.0"
authors = ["Dan Sanduleac <dsanduleac@palantir.com>"]
license-file = "../LICENSE"

[dependencies]
conjure-verification-common = { path = "../verification-common" }
conjure-verification-http = { path = "../verification-http" }
conjure-verification-http-server = { path = "../verification-http-server" }
conjure-verification-error = { path = "../verification-error" }
conjure-verification-error-derive = { path = "../verification-error-derive" }
serde-conjure = { path = "../serde-conjure" }

bytes = "0.4"
derive_more = "0.11"
either = "1.5"
futures = "0.1.21"
http = "0.1"
hyper = "0.12"
itertools = "0.7.4"
lazy_static = "1.0"
log = "0.4"
mime = "0.3"
pretty_env_logger = "0.2"
serde = "1.0"
serde_json = "1.0"
serde_plain = "0.3"
typed-headers = "0.1"
